objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Developer_Invoice_Contact_Name__c</fullName>
        <inlineHelpText>Enter the name of the person that the developers identifies as the person with whom Noesis should connect with at their company in order to have a project invoice generated</inlineHelpText>
        <label>Developer Invoice Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Invoice_Contact_Phone_Number__c</fullName>
        <label>Developer Invoice Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Developer_Invoice_Email_Contact__c</fullName>
        <label>Developer Invoice Email Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Developer_Invoice_Timing__c</fullName>
        <formula>Project_Invoice_Received_Date__c - Project_Invoice_Request_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer Invoice TurnAround</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developer_Rate_Schedule_Expire_Date__c</fullName>
        <label>Developer Rate Schedule Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_Rate_Schedule_Received_Date__c</fullName>
        <label>Developer Rate Schedule Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_Rate_Schedule_Sent_Date__c</fullName>
        <label>Developer Rate Schedule Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_Score__c</fullName>
        <formula>Account.Developer_Score__c</formula>
        <label>Developer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developer_Signer_Email__c</fullName>
        <label>Developer Signer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Developer_Strategy_Call_Date__c</fullName>
        <label>Developer Strategy Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Down_Payment_or_Residuals__c</fullName>
        <inlineHelpText>Enter the $ amount of any downpayment or residuals that the borrower will apply to the Gross Project Amount to buy down the cost of financing the project</inlineHelpText>
        <label>Down Payment or Residuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duplicate_EBP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate EBC or Trash EBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAP_Notes__c</fullName>
        <description>Any notes regarding EAP go here. Please copy/paste all emails and describe phone conversations in detail.</description>
        <inlineHelpText>Any notes regarding EAP go here. Please copy/paste all emails and describe phone conversations in detail.</inlineHelpText>
        <label>EAP Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EBP_Consult_Date__c</fullName>
        <label>EBC Consult Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBP_Consult_Results__c</fullName>
        <label>EBC Consult Results</label>
        <picklist>
            <picklistValues>
                <fullName>Do not Proceed with Strategy Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Strategy Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Strategy Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Scheduling Follow-Up Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBP_Create_Date__c</fullName>
        <label>EBC Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBP_Link__c</fullName>
        <label>EBC Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EBP_Project_Creator_Email__c</fullName>
        <label>EBC Project Creator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EBP_Project_Creator_Name__c</fullName>
        <inlineHelpText>This is the name of the employee (developer) that created the EBP on the Platform</inlineHelpText>
        <label>EBC Project Creator Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBP_Proposal_State__c</fullName>
        <label>EBC Proposal State</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBP_User__c</fullName>
        <label>EBC User #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECM_Description__c</fullName>
        <label>Project ECM Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ECM_Type__c</fullName>
        <inlineHelpText>Select the ECM project types typically sold/offered</inlineHelpText>
        <label>ECM Type</label>
        <picklist>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling/Heating/Refrigeration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Automation/Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Supply/Co-Generation/Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metering/Data Logger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep Retrofit (Multi ECM Types)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Earliest_ECM_COMPLETION__c</fullName>
        <inlineHelpText>Select the date that the project is being awarded</inlineHelpText>
        <label>Earliest ECM Completion Date: Proj Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effort_Type__c</fullName>
        <label>Effort Type</label>
        <picklist>
            <picklistValues>
                <fullName>GGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Savings Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Up Savings Estimator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunt Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hannon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDF Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Channel and Endorsement Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 TLI 3,4 Initiative</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Rebates__c</fullName>
        <inlineHelpText>Enter any eligible rebates that the customer/project is eligible for</inlineHelpText>
        <label>Eligible Rebates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_of_Term_BuyOut__c</fullName>
        <label>End of Term BuyOut</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Project_Proposal_Date__c</fullName>
        <inlineHelpText>Select the date that the project developer is scheduling a project presentation with the Financial Decision Maker of the project</inlineHelpText>
        <label>Financial Stakeholder Proj Presen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Projects_Proposals_Per_Year__c</fullName>
        <inlineHelpText>Enter the number of annual deals closed</inlineHelpText>
        <label>Estimated # Project Proposals Per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <description>Description of lead and opportunity go here.</description>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Data_Services_Meters__c</fullName>
        <description>Number of meters existing within the Noesis system that are signed up for Pro Data Services already.</description>
        <inlineHelpText>How many meters do they already have signed up?</inlineHelpText>
        <label>Existing Data Services Meters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exposure_Marketing_Partner_Region_s__c</fullName>
        <inlineHelpText>select one or more regions relative to the Marketing Partner Exposure program</inlineHelpText>
        <label>Exposure Marketing Partner Region(s)</label>
        <picklist>
            <picklistValues>
                <fullName>West Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FLO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FLO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Proof_of_Ownership_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility Proof of Ownership Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condominium/HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming/Gambling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial (Warehouse/Office/Flex)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marijuana Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily Housing (Apts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious (Churches, Synagogues,etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal Property</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <inlineHelpText>Enter the % of the commission paid to Noesis for the Deal or Project</inlineHelpText>
        <label>Closing Fees (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Finance_Lender__c</fullName>
        <description>Select the Lender used for Project Finance</description>
        <label>Finance Lender</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Energy Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascentium Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C&amp;I Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CleanFund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudNet Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Capital Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Security Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hannon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFS Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Providence Capital Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew Energy Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIP Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vireo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Notes__c</fullName>
        <label>Finance Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financed_Amount_Tax_Option__c</fullName>
        <label>Financed Amount Tax Option</label>
        <picklist>
            <picklistValues>
                <fullName>Taxes Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxes Excluded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financed_Project_Amount_W_O_M_V_PI_Fee__c</fullName>
        <label>Financed Project Amount W/O M&amp;V &amp; PI Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financed_Project_Amount__c</fullName>
        <inlineHelpText>The net amount that is financed</inlineHelpText>
        <label>Financed Project Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Decision_Maker_Email__c</fullName>
        <label>Financial Decision Maker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Financial_Decision_Maker_First_Name__c</fullName>
        <label>Financial Decision Maker First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Decision_Maker_Last_Name__c</fullName>
        <label>Financial Decision Maker Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Decision_Maker_Phone__c</fullName>
        <label>Financial Decision Maker Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Financial_Decision_Maker_Title__c</fullName>
        <label>Financial Decision Maker Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Closed_Won_Adjustment_Terms__c</fullName>
        <label>Financing Closed Won Adjustment Terms</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Closed_Won_Reason__c</fullName>
        <label>Financing Closed Won Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Adjusted Financing Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services/Account Management Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Financing: Better Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Financing: Alternate Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Financing_Lost_Reason__c</fullName>
        <label>Financing Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate Financing: Alternate Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Financing: Better Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Project Scope or Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrower Not Sold on Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherry Picking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Lost Project to Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Won Project w/o Noesis Financing from Noesis Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Financing Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy with Terms and Conditions of Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went with Other Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner did not renew</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Term_MOS__c</fullName>
        <inlineHelpText>Please enter the financing term in months</inlineHelpText>
        <label>Financing Term (MOS)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financing_Term_Sheet_Conversation_Date__c</fullName>
        <label>Financing Term Sheet Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Term_Sheet_Expiration_Date__c</fullName>
        <label>Financing Term Sheet Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Term_Sheet_Issue_Date__c</fullName>
        <label>Financing Term Sheet Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Term_Sheet_Sent_Date__c</fullName>
        <label>Financing Term Sheet Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Vehicle_Type__c</fullName>
        <inlineHelpText>Select the respective loan type for this project</inlineHelpText>
        <label>Financing Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Operating Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficiency Performance Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Savings Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muni EPL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Time_EBP_User__c</fullName>
        <label>First Time EBP User</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_3IA_Date__c</fullName>
        <label>Second 3IA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fourth_3IA_Date__c</fullName>
        <label>Fourth 3IA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Financing_Rate__c</fullName>
        <label>Gross Financing Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Project_w_Noesis_Orig_Fee__c</fullName>
        <label>Gross Project w/ Noesis Orig Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>High_Likely_hood_of_Closing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Likely hood of Closing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hub_Channel_Spokes__c</fullName>
        <inlineHelpText>Select only if your opportunity is a Pro Channel Type to reflect the number of spokes under the hub account</inlineHelpText>
        <label># Hub Channel Spokes</label>
        <picklist>
            <controllingField>Hub_or_Spoke_Type__c</controllingField>
            <picklistValues>
                <fullName>1-19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hub_or_Spoke_Type__c</fullName>
        <label>Hub or Spoke Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Hub: Pays Spoke User Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hub: Does not Pay User Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoke: User Fees Paid by Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoke: User Fees Paid by Spoke</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kellies_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kellies Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lender_Additional_Info_Request_Date__c</fullName>
        <label>Lender Additional Info Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Additional_Info_Submit_Date__c</fullName>
        <label>Lender Additional Info Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lender Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lender_Credit_Approval_Requirements__c</fullName>
        <label>Lender Credit Approval Doc Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>2 Years Audited Financial Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years Entity Tax Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years Tax Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Entity Financial Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy of Major Tenant Lease(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Year’s Operating Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Financial Statement(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Appraisal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Operating Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Purchase Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rrder with Line Item Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YTD Financial Statements</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lender_Credit_Decision_Date__c</fullName>
        <label>Lender Credit Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Credit_Decision_TurnAround__c</fullName>
        <formula>Lender_Credit_Decision_Date__c - Lender_RFQ_Submittal_Date__c</formula>
        <label>Lender Credit Decision TurnAround</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lender_Credit_Decision__c</fullName>
        <label>Lender Credit Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision in Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lender_Loan_Doc_Received_Date__c</fullName>
        <label>Lender Loan Doc Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Loan_Doc_TurnAround__c</fullName>
        <formula>Lender_Loan_Doc_Received_Date__c -   Noesis_Loan_Doc_Request_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender Loan Doc TurnAround</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lender_Loan_Document_Requirements__c</fullName>
        <label>Lender Loan  Document Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>UCC-1 Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate/LLC Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy of Cancelled Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy of Driver’s License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Notarization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed ESA Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed SSA Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authority &amp; Incumbency Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification of Assets Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed ACH Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Project Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrower Facility Proof of Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Loan Documents</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lender_RFQ_Submittal_Date__c</fullName>
        <label>Lender RFQ Submittal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Doc_Execution_Date__c</fullName>
        <inlineHelpText>Select the date that the Financial Decision Maker will have the Loan Documents signed</inlineHelpText>
        <label>Loan Doc Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Docs_Received_Date__c</fullName>
        <inlineHelpText>Enter the date that the project loan documents have been received back signed</inlineHelpText>
        <label>Loan Docs Received from Borrower Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Docs_Sent_Date__c</fullName>
        <inlineHelpText>Enter the date that the project loan documents have been sent to the borrower</inlineHelpText>
        <label>Loan Docs Sent to Borrower Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Term_Approval_Date__c</fullName>
        <label>Loan Term Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Term_Negotiation_Date__c</fullName>
        <label>Loan Term Negotiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Partner_Cost_Per_Lead__c</fullName>
        <label>Marketing Partner Cost Per Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>